<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

        <TextView
            android:id="@+id/tvHeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/header_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19/02/2022 08:00:22"
            app:layout_constraintStart_toStartOf="@+id/tvHeaderName"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderName" />

        <TextView
            android:id="@+id/tvTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/receipt_buy"
            android:textSize="22sp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateAndTime" />

        <TextView
            android:id="@+id/tvTitleOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order_id"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tvHeaderName"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel" />

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="123125"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTitleOrderId" />

        <TextView
            android:id="@+id/tvTitleCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/costumer"
            app:layout_constraintStart_toStartOf="@+id/tvHeaderName"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleOrderId" />

        <TextView
            android:id="@+id/tvCostumerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="110dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTitleCustomerName"
            tools:text="Oki Sulton" />

        <TextView
            android:id="@+id/tvTitleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/product"
            app:layout_constraintStart_toStartOf="@+id/tvHeaderName"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCustomerName" />

        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="110dp"
            tools:text="Pulsa Telkomsel"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTitleProduct" />

        <TextView
            android:id="@+id/tvTitleAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="@+id/tvHeaderName"
            app:layout_constraintTop_toBottomOf="@+id/tvProduct" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="Rp. 18.000"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTitleAmount" />

        <TextView
            android:id="@+id/tvFooterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/thanks_for_your_order"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleAmount" />

        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/footer_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFooterLabel" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/product_list"
            android:textSize="10sp"
            android:textStyle="italic"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotes"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="110dp" />
</androidx.constraintlayout.widget.ConstraintLayout>